Settings page localization

--- a/app/application/index.html
+++ b/app/application/index.html
@@ -216,5 +216,23 @@
 			</div>
 			<!-- codes -->
 		</div>
+		<div class="sticky bottom-5 z-10 w-max mx-auto">
+			<div class="flex items-center justify-center p-2 bg-popup-magenta rounded-2xl shadow text-white">
+				<svg class="relative p-1" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+					<g fill-rule="evenodd">
+						<path fill="#fff" d="M512 512H0V0h512z" />
+						<path fill="#388d00" d="M512 512H0V341.3h512z" />
+						<path fill="#d43516" d="M512 170.8H0V.1h512z" />
+					</g>
+				</svg>
+				<h5 class="m-0 text-center mx-5">A magyar nyelv már elérhető!</h5>
+
+				<a onclick="this.parentElement.style.display='none'" id="updateClose" class="top-0.5 relative p-1 transition-colors duration-200 transform rounded-md hover:text-gray-800 cursor-pointer">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+					</svg>
+				</a>
+			</div>
+		</div>
 	</body>
 </html>
